<resources>
    <string name="app_name">SecurePass3</string>

    <string name="activity_title_settings">Settings</string>

    <string name="list_empty">No items</string>
    <string name="list_action_delete">Delete</string>

    <string name="adder_title_range">Length range</string>
    <string name="adder_title_type">Algorithm</string>

    <string name="button_generate">Generate</string>
    <string name="button_close">Close</string>

    <string name="toast_copy">Text copied!</string>

    <string name="tag_text_primary">text_primary</string>
    <string name="tag_text_secondary">text_secondary</string>
    <string name="tag_text_tertiary">text_tertiary</string>
    <string name="tag_view_background">view_background</string>
</resources>
