<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/tag_view_background"
    tools:context=".activity.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fakeToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:fontFamily="@font/manrope"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@android:color/primary_text_light"
            android:tag="@string/tag_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSettings"/>
        <ImageButton
            android:id="@+id/buttonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_settings_outline_blue_24dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_empty"
        android:fontFamily="@font/manrope_sb"
        android:drawableTop="@drawable/ic_shape_outline_gray_24dp"
        android:drawablePadding="8dp"
        android:tag="@string/tag_text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_shield_plus_white_24dp"/>

    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/addLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/rangeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/adder_title_range"
                    android:textColor="@android:color/primary_text_dark"
                    android:fontFamily="@font/manrope_sb" />
                <com.appyvet.materialrangebar.RangeBar
                    android:id="@+id/addRangeBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mrb_connectingLineColor="@android:color/background_light"
                    app:mrb_tickColor="@color/colorAccent"
                    app:mrb_temporaryPins="false"
                    app:mrb_pinTextColor="@android:color/primary_text_dark"
                    app:mrb_pinColor="@color/colorAccent"
                    app:mrb_tickStart="8"
                    app:mrb_tickEnd="32"/>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/rangeView"
                app:layout_constraintBottom_toTopOf="@id/buttonAddOk">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/adder_title_type"
                    android:textColor="@android:color/primary_text_dark"
                    android:fontFamily="@font/manrope_sb"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/adder_type_spinner"/>
                <Spinner
                    android:id="@+id/adder_type_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/buttonAddCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_close"
                android:textColor="@android:color/primary_text_dark"
                app:layout_constraintEnd_toStartOf="@id/buttonAddOk"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?borderlessButtonStyle" />
            <Button
                android:id="@+id/buttonAddOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_generate"
                android:textColor="@android:color/primary_text_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?borderlessButtonStyle" />
        </android.support.constraint.ConstraintLayout>

    </io.codetail.widget.RevealLinearLayout>

</android.support.constraint.ConstraintLayout>